--- a/package.json
+++ b/package.json
@@ -14,20 +14,25 @@
     "check:lint": "eslint --max-warnings 0 --report-unused-disable-directives",
     "check:prettier": "prettier --check .",
     "check:tsc": "tsc --noEmit",
-    "format": "prettier --write ."
+    "db:start": "docker-compose up db",
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "peerDependencies": {
     "pg": ">=8"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.1",
     "@types/node": "16",
     "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "jest": "^28.1.1",
     "pg": "^8.7.3",
     "prettier": "^2.4.1",
+    "ts-jest": "^28.0.4",
     "typescript": "^4.4.3"
   }
 }
